fixed: value of distress widget not easily visible in printout

--- a/src/sass/core/_print.scss
+++ b/src/sass/core/_print.scss
@@ -237,6 +237,9 @@ label, legend, .trigger, .note {
             border: 1px solid black;
         }
     }
+    .slider-handle {
+        border: 1px solid black;
+    }
     .slider.slider-vertical .slider-track {
         border: 1px solid black;
         border-bottom: none;
